added the website properly and other changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>My Page</title>
  </head>
 <body>
- 
+ <figure>
 <h1> Table Tennis </h1>
 <h2> Classroom Tournament Leadership board </h2>
 <table border="1">
@@ -58,6 +58,9 @@
 </tr>
 
 </tbody>
+</table>
+</figure>   
+
 <hr>
 
 <h2> Rules of Table Tennis</h2>
@@ -80,7 +83,7 @@
 </ul>
 
 <p><em> Official rules can be found in the offi
-    cial website <a href="www.google.com">here.</a> 
+    cial website <a href="http://www.google.com">here.</a> 
 
 </em></p>
 
@@ -89,7 +92,7 @@
 <h2> Game SetUp : </h2>
 <p> The game should be set up as per Table tennis tournament at Liga pro</p>
 <img src="images/tabletennis.png" alt="a backshot photo of a table tennis player htting the ball" 
- width="500" height="300">
+ width="800" height="500">
 </body>
 </html>
 
