removed the borders of the table

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <figure>
 <h1> Table Tennis </h1>
 <h2> Classroom Tournament Leadership board </h2>
-<table border="1">
+<table>
 <thead>
     <tr>
     <th>Position</th>
@@ -91,8 +91,12 @@
 
 <h2> Game SetUp : </h2>
 <p> The game should be set up as per Table tennis tournament at Liga pro</p>
+
+<figure>
 <img src="images/tabletennis.png" alt="a backshot photo of a table tennis player htting the ball" 
  width="800" height="500">
+ <figcaption> a backshot photo of a table tennis player htting the ball  </figcaption>
+</figure>
 </body>
 </html>
 
